--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
 html {
   font-family: 'Helvetica Neue', 'Segoe UI', Helvetica, Verdana, sans-serif;
+  background-color: #ddd;
 }
 
 body {
@@ -7,13 +8,22 @@ body {
   padding: 1rem;
 }
 
+h1 {
+  margin-top: 0;
+  text-align: center;
+  font-weight: 200;
+}
+
 iframe {
+  display: block;
   width: 100%;
   height: 360px;
   border: none;
+  background-color: #fff;
 }
 
 .bfg__content {
-  overflow: hidden !important; // Hack: fix to remove the strange vertical scroll bar...
-  border: 1px solid dodgerblue;
+  box-shadow: 3px 3px 6px #bbb;
+  border-radius: 3px;
+  border: 1px solid #aaa;
 }
