--- a/src/demos/demo.scss
+++ b/src/demos/demo.scss
@@ -11,3 +11,64 @@ body {
   margin: 0;
   padding: 1rem;
 }
+
+#demo-description {
+  cursor: pointer;
+  position: fixed;
+  z-index: 10;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  max-height: 100%;
+  overflow: auto;
+  opacity: 0.9;
+  box-sizing: border-box;
+  padding: 1rem;
+  background-color: #212121;
+  color: #BDBDBD;
+  text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.9);
+  line-height: 1.5em;
+  transition: opacity ease 0.6s;
+
+  &:hover {
+    opacity: 0.8;
+  }
+
+  code {
+    padding: 0.2em 0.4em;
+    border-radius: 2px;
+    border: 1px solid rgba(255, 255, 255, 0.15);
+    background-color: rgba(0, 0, 0, 0.3);
+  }
+}
+
+.demo-box {
+  cursor: pointer;
+  overflow: hidden;
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  border: 1px solid #64B5F6;
+  background-color: #BBDEFB;
+  color: #1E88E5;
+  text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.3);
+  font-family: 'Consolas', 'Courier New', Courier, monospace;
+  font-size: 12px;
+  line-height: 3em;
+  text-indent: 1em;
+  white-space: nowrap;
+  &:after {
+    content: "100% * 100%";
+  }
+}
+
+.demo-box--alt {
+  width: 1000px;
+  height: 1000px;
+  border-color: #4DB6AC;
+  background-color: #B2DFDB;
+  color: #00897B;
+  &:after {
+    content: "1000px * 1000px";
+  }
+}
