--- a/src/demos/demo.scss
+++ b/src/demos/demo.scss
@@ -1,3 +1,5 @@
+@import "../variables";
+
 html {
   font-family: 'Helvetica Neue', 'Segoe UI', Helvetica, Verdana, sans-serif;
 }
@@ -15,18 +17,19 @@ body {
 #demo-description {
   cursor: pointer;
   position: fixed;
-  z-index: 10;
+  z-index: 9;
   bottom: 0;
   left: 0;
   width: 100%;
   max-height: 100%;
   overflow: auto;
-  opacity: 0.9;
+  opacity: 0.95;
   box-sizing: border-box;
   padding: 1rem;
-  background-color: #212121;
-  color: #BDBDBD;
-  text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.9);
+  border: 1px solid map-get($theme, border);
+  background-color: map-get($theme, background);
+  color: map-get($theme, forground);
+  text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.5);
   line-height: 1.5em;
   transition: opacity ease 0.6s;
 
@@ -37,8 +40,8 @@ body {
   code {
     padding: 0.2em 0.4em;
     border-radius: 2px;
-    border: 1px solid rgba(255, 255, 255, 0.15);
-    background-color: rgba(0, 0, 0, 0.3);
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    background-color: rgba(0, 0, 0, 0.15);
   }
 }
 
@@ -48,9 +51,9 @@ body {
   box-sizing: border-box;
   width: 100%;
   height: 100%;
-  border: 1px solid #64B5F6;
-  background-color: #BBDEFB;
-  color: #1E88E5;
+  border: 1px solid #81C784;
+  background-color: #C8E6C9;
+  color: #43A047;
   text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.3);
   font-family: 'Consolas', 'Courier New', Courier, monospace;
   font-size: 12px;
