--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,9 @@
+@import "./variables";
+
 html {
   font-family: 'Helvetica Neue', 'Segoe UI', Helvetica, Verdana, sans-serif;
-  background-color: #ddd;
+  background-color: #D7CCC8;
+  color: #4E342E;
 }
 
 body {
@@ -14,16 +17,38 @@ h1 {
   font-weight: 200;
 }
 
-iframe {
-  display: block;
-  width: 100%;
-  height: 360px;
-  border: none;
-  background-color: #fff;
-}
+#demo-container {
+  iframe {
+    display: block;
+    width: 100%;
+    height: 360px;
+    border: none;
+    background-color: #fff;
+  }
 
-.bfg__content {
-  box-shadow: 3px 3px 6px #bbb;
-  border-radius: 3px;
-  border: 1px solid #aaa;
+  a {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 10;
+    opacity: 0.95;
+    padding: 0rem 0.3rem;
+    border-bottom-left-radius: 3px;
+    border: 1px solid map-get($theme, border);
+    background-color: map-get($theme, background);
+    color: map-get($theme, forground);
+    text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.5);
+    text-decoration: none;
+    transition: opacity ease 0.6s;
+
+    &:hover {
+      opacity: 0.8;
+    }
+  }
+
+  .bfg__content {
+    box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.1);
+    border-radius: 3px;
+    border: 1px solid #BCAAA4;
+  }
 }
