Fix 2rows height...

--- a/src/bem-flex-grid.scss
+++ b/src/bem-flex-grid.scss
@@ -113,6 +113,8 @@ $bfg-breakpoints: (
       display: block;
       max-width: none;
       max-height: none;
+      width: auto;
+      height: auto;
     }
   }
 }
