--- a/src/demo.scss
+++ b/src/demo.scss
@@ -1,22 +1,22 @@
-$light-colors: (
+$demo-light-colors: (
   border: #CFD8DC,
   background: #ECEFF1,
   forground: #546E7A
 );
 
-$dark-colors: (
+$demo-dark-colors: (
   border: #455A64,
   background: #546E7A,
   forground: #CFD8DC
 );
 
-@mixin dark-container {
-  border: 1px solid map-get($dark-colors, border);
-  background-color: map-get($dark-colors, background);
-  color: map-get($dark-colors, forground);
+@mixin demo-dark-box {
+  border: 1px solid map-get($demo-dark-colors, border);
+  background-color: map-get($demo-dark-colors, background);
+  color: map-get($demo-dark-colors, forground);
 }
 
-$border-radius: 3px;
+$demo-border-radius: 3px;
 
 html {
   font-family: 'Helvetica Neue', 'Segoe UI', Helvetica, Verdana, sans-serif;
@@ -36,8 +36,8 @@ body {
 /* ===== Handle index ===== */
 
 #demo-index { // Add this id on the <html> tag
-  background-color: map-get($light-colors, background);
-  color: map-get($light-colors, forground);
+  background-color: map-get($demo-light-colors, background);
+  color: map-get($demo-light-colors, forground);
 
   &, body {
     height: auto;
@@ -55,8 +55,8 @@ h1 {
 
 .demo-showcase-item {
   box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.1);
-  border-radius: $border-radius;
-  border: 1px solid map-get($light-colors, border);
+  border-radius: $demo-border-radius;
+  border: 1px solid map-get($demo-light-colors, border);
 }
 
 .demo-showcase-iframe {
@@ -74,8 +74,8 @@ h1 {
   z-index: 10;
   opacity: 0.95;
   padding: 0rem 0.3rem;
-  border-bottom-left-radius: $border-radius;
-  @include dark-container;
+  border-bottom-left-radius: $demo-border-radius;
+  @include demo-dark-box;
   text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.5);
   text-decoration: none;
   transition: opacity ease 0.6s;
@@ -131,8 +131,8 @@ h1 {
   overflow: auto;
   opacity: 0.95;
   box-sizing: border-box;
-  padding: 1rem;
-  @include dark-container;
+  padding: 0.5rem 1rem;
+  @include demo-dark-box;
   text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.5);
   line-height: 1.5em;
   transition: opacity ease 0.6s;
@@ -143,7 +143,7 @@ h1 {
 
   code {
     padding: 0.2em 0.4em;
-    border-radius: $border-radius;
+    border-radius: $demo-border-radius;
     border: 1px solid rgba(255, 255, 255, 0.2);
     background-color: rgba(0, 0, 0, 0.15);
   }
