--- a/src/bem-flex-grid.scss
+++ b/src/bem-flex-grid.scss
@@ -1,10 +1,13 @@
 $bfg-gap: 1rem !default;
 
+$bfg-padding: 0.5rem !default;
+
 $bfg-fill: (
-  padding: 0.5rem,
   border-radius: 2px,
-  border: #ddd,
-  background: #eee
+  header-border: #d5d5d5,
+  header-bg: #f6f6f6,
+  content-border: #ddd,
+  content-bg: #eee
 ) !default;
 
 $bfg-breakpoints: (
@@ -13,6 +16,8 @@ $bfg-breakpoints: (
   lg: 992px,
   xl: 1200px
 ) !default;
+
+$bfg-header-height: 2rem;
 
 @mixin bfg-media-breakpoint-up($size) {
   @media (min-width: map-get($bfg-breakpoints, $size)) {
@@ -137,46 +142,52 @@ $bfg-breakpoints: (
   @include bfg-boxes(xs-);
 }
 
+.bfg__header {
+  padding: 0 $bfg-padding;
+  box-sizing: border-box;
+  position: absolute;
+  z-index: 2;
+  overflow: hidden;
+  top: 0;
+  left: 0;
+  right: 0;
+  line-height: $bfg-header-height;
+  font-size: 1rem;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.bfg--gap .bfg__header {
+  left: ($bfg-gap / 2);
+  right: ($bfg-gap / 2);
+}
+
 .bfg__content {
+  padding: 0 $bfg-padding;
+  box-sizing: border-box;
   position: relative;
   z-index: 1;
   overflow: auto;
-  box-sizing: border-box;
   width: 100%;
   height: 100%;
 }
 
-@mixin bfg-content-fill($name, $fill) {
+.bfg__header + .bfg__content {
+  padding-top: ($bfg-header-height + $bfg-padding);
+}
+
+@mixin bfg-filler($name, $fill) {
+  .bfg__header--#{$name} {
+    border-radius: map-get($fill, border-radius) map-get($fill, border-radius) 0 0;
+    border: 1px solid map-get($fill, header-border);
+    background-color: map-get($fill, header-bg);
+  }
+
   .bfg__content--#{$name} {
-    padding: map-get($fill, padding);
     border-radius: map-get($fill, border-radius);
-    border: 1px solid map-get($fill, border);
-    background-color: map-get($fill, background);
+    border: 1px solid map-get($fill, content-border);
+    background-color: map-get($fill, content-bg);
   }
 }
 
-@include bfg-content-fill(fill, $bfg-fill);
-
-// FIXME: Should be in the previous @mixin ???
-.bfg__header {
-  position: absolute;
-  z-index: 2;
-  top: 0;
-  left: 0;
-  right: 0;
-  box-sizing: border-box;
-  border-radius: map-get($bfg-fill, border-radius) map-get($bfg-fill, border-radius) 0 0;
-  border: 1px solid map-get($bfg-fill, border);
-  text-indent: 0.5rem;
-  line-height: 2rem;
-  font-size: 1rem;
-  background-color: #fafafa;
-}
-
-.bfg__header + .bfg__content {
-  padding-top: 2.5rem;
-}
-
-.bfg--gap .bfg__header {
-  margin: 0 ($bfg-gap / 2);
-}
+@include bfg-filler(fill, $bfg-fill);
