--- a/src/demo.scss
+++ b/src/demo.scss
@@ -14,6 +14,12 @@ $demo-dark-colors: (
   border: 1px solid map-get($demo-dark-colors, border);
   background-color: map-get($demo-dark-colors, background);
   color: map-get($demo-dark-colors, forground);
+  text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.5);
+  transition: opacity ease 0.6s;
+
+  &:hover {
+    opacity: 0.8;
+  }
 }
 
 $demo-border-radius: 3px;
@@ -42,13 +48,13 @@ body {
   &, body {
     height: auto;
   }
-}
 
-h1 {
-  margin: 1rem 0 2rem 0;
-  text-align: center;
-  font-weight: 200;
-  font-size: 2.5rem;
+  h1 {
+    margin: 1rem 0 2rem 0;
+    text-align: center;
+    font-weight: 200;
+    font-size: 2.5rem;
+  }
 }
 
 /* ===== Handle showcase ===== */
@@ -78,13 +84,7 @@ h1 {
   padding: 0rem 0.3rem;
   border-bottom-left-radius: $demo-border-radius;
   @include demo-dark-box;
-  text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.5);
   text-decoration: none;
-  transition: opacity ease 0.6s;
-
-  &:hover {
-    opacity: 0.8;
-  }
 }
 
 /* ===== Handle source ===== */
@@ -93,23 +93,20 @@ h1 {
   position: fixed;
   z-index: 12;
   top: 0;
-  left: 50%;
+  left: 0;
   width: 40px;
-  margin-left: -20px;
   padding: 0px 0 6px 0;
   line-height: 1rem;
-  text-align: center;
+  border-bottom-right-radius: $demo-border-radius;
+  @include demo-dark-box;
   text-decoration: none;
-  border-radius: 0 0 $demo-border-radius $demo-border-radius;
-  border: 1px solid map-get($demo-dark-colors, forground);
-  border-top-width: 0;
-  background: map-get($demo-dark-colors, background);
-  color: map-get($demo-dark-colors, forground);
+  text-align: center;
 }
 
 #demo-source-code {
   overflow: auto;
-  max-width: 80%;
+  max-width: 70%;
+  max-height: 70%;
   margin: auto;
   padding: 2rem;
   box-shadow: 0 0 30px rgba(0, 0, 0, 0.6);
@@ -135,7 +132,6 @@ h1 {
       display: block !important;
     }
   }
-
 }
 
 /* ===== Handle container ===== */
@@ -186,13 +182,7 @@ h1 {
   box-sizing: border-box;
   padding: 0.5rem 1rem;
   @include demo-dark-box;
-  text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.5);
   line-height: 1.5em;
-  transition: opacity ease 0.6s;
-
-  &:hover {
-    opacity: 0.8;
-  }
 
   code {
     padding: 0.2em 0.4em;
