--- a/src/bem-flex-grid.scss
+++ b/src/bem-flex-grid.scss
@@ -89,6 +89,10 @@ $bfg-header-height: 2rem !default;
     > .bfg__box--#{$size + 10} { max-width: (1000% / 12); }
     > .bfg__box--#{$size + 11} { max-width: (1100% / 12); }
     > .bfg__box--#{$size + 12} { max-width: 100%; }
+
+    &.bfg--#{$size + lines-2} > .bfg__box { height: 50%; }
+    &.bfg--#{$size + lines-3} > .bfg__box { height: (100% / 3); }
+    &.bfg--#{$size + lines-4} > .bfg__box { height: 25%; }
   }
 
   .bfg--col {
@@ -104,15 +108,11 @@ $bfg-header-height: 2rem !default;
     > .bfg__box--#{$size + 10} { max-height: (1000% / 12); }
     > .bfg__box--#{$size + 11} { max-height: (1100% / 12); }
     > .bfg__box--#{$size + 12} { max-height: 100%; }
+
+    &.bfg--#{$size + lines-2} > .bfg__box { width: 50%; }
+    &.bfg--#{$size + lines-3} > .bfg__box { width: (100% / 3); }
+    &.bfg--#{$size + lines-4} > .bfg__box { width: 25%; }
   }
-
-  .bfg--#{$size + 2rows} > .bfg__box { height: 50%; }
-  .bfg--#{$size + 3rows} > .bfg__box { height: (100% / 3); }
-  .bfg--#{$size + 4rows} > .bfg__box { height: 25%; }
-
-  .bfg--#{$size + 2cols} > .bfg__box { width: 50%; }
-  .bfg--#{$size + 3cols} > .bfg__box { width: (100% / 3); }
-  .bfg--#{$size + 4cols} > .bfg__box { width: 25%; }
 
   .bfg--#{$size + disabled} {
     display: block;
