--- a/src/demo.scss
+++ b/src/demo.scss
@@ -1,20 +1,26 @@
-$demo-light-colors: (
+$demo-light: (
   border: #CFD8DC,
   background: #ECEFF1,
-  forground: #546E7A
+  forground: #607D8B
 );
 
-$demo-dark-colors: (
+$demo-dark: (
   border: #455A64,
-  background: #546E7A,
-  forground: #CFD8DC
+  background: #607D8B,
+  forground: #ECEFF1
+);
+
+$demo-variant: (
+  border: #D32F2F,
+  background: #F44336,
+  forground: #FFEBEE
 );
 
 @mixin demo-dark-box {
-  border: 1px solid map-get($demo-dark-colors, border);
-  background-color: map-get($demo-dark-colors, background);
-  color: map-get($demo-dark-colors, forground) !important;
-  text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.5);
+  border: 1px solid map-get($demo-dark, border);
+  background-color: map-get($demo-dark, background);
+  color: map-get($demo-dark, forground) !important;
+  text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.2);
   transition: opacity ease 0.6s;
   opacity: 0.95;
 
@@ -43,8 +49,8 @@ body {
 /* ===== Handle index ===== */
 
 #demo-index { // Add this id on the <html> tag
-  background-color: map-get($demo-light-colors, background);
-  color: map-get($demo-light-colors, forground);
+  background-color: map-get($demo-light, background);
+  color: map-get($demo-light, forground);
 
   &, body {
     height: auto;
@@ -66,17 +72,22 @@ body {
   }
 
   a {
-    color: map-get($demo-light-colors, forground);
+    color: map-get($demo-light, forground);
   }
 }
 
 /* ===== Handle showcase ===== */
 
+#demo-showcase > .bfg__box {
+  //overflow: visible;
+}
+
 .demo-showcase__item.bfg__content {
+  //overflow: visible;
   padding: 0;
   box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.1);
   border-radius: $demo-border-radius;
-  border: 1px solid map-get($demo-light-colors, border);
+  border: 1px solid map-get($demo-light, border);
   background-color: white;
 }
 
@@ -97,6 +108,24 @@ body {
   border-bottom-left-radius: $demo-border-radius;
   @include demo-dark-box;
   text-decoration: none;
+}
+
+.demo-showcase__count {
+  display: none;
+  position: absolute;
+  right: -0.5rem;
+  bottom: -0.5rem;
+  z-index: 10;
+  width: 2rem;
+  height: 2rem;
+  line-height: 2rem;
+  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
+  border-radius: 50%;
+  border: 1px solid map-get($demo-variant, border);
+  background-color: map-get($demo-variant, background);
+  color: map-get($demo-variant, forground);
+  text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.2);
+  text-align: center;
 }
 
 /* ===== Handle source ===== */
