--- a/src/bem-flex-grid.scss
+++ b/src/bem-flex-grid.scss
@@ -64,14 +64,6 @@ $bfg-header-height: 2rem !default;
   flex-wrap: wrap;
 }
 
-.bfg--fluid {
-  height: auto;
-
-  .bfg__box, .bfg__content {
-    overflow: initial;
-  }
-}
-
 .bfg__box {
   flex: 1 1 100%;
   position: relative;
@@ -196,6 +188,13 @@ $bfg-header-height: 2rem !default;
   + .bfg__content--nopad {
     padding-top: $bfg-header-height;
   }
+}
+
+.bfg--overflow .bfg__box,
+.bfg--overflow .bfg__content,
+.bfg__box--overflow,
+.bfg__box--overflow .bfg__content {
+  overflow: initial;
 }
 
 @mixin bfg-filler($name, $fill) {
