--- a/src/demos/index.scss
+++ b/src/demos/index.scss
@@ -27,8 +27,8 @@ a {
 /* ===== Handle showcase ===== */
 
 .demo-showcase__item {
+  position: relative;
   box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.1);
-  border-radius: 0;
   border: 1px solid map-get($demo-light, border);
   background-color: white;
 }
