Fix difference between Chrome and Firefox
Set default 100% to box height in row (and box width in col)

--- a/src/bem-flex-grid.scss
+++ b/src/bem-flex-grid.scss
@@ -42,10 +42,18 @@ $bfg-header-height: 2rem !default;
 
 .bfg--row {
   flex-direction: row;
+
+  > .bfg__box {
+    height: 100%;
+  }
 }
 
 .bfg--col {
   flex-direction: column;
+
+  > .bfg__box {
+    width: 100%;
+  }
 }
 
 .bfg--gap {
