--- a/src/demos/demo.scss
+++ b/src/demos/demo.scss
@@ -115,7 +115,7 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-/* ===== Handle container ===== */
+/* ===== Handle container and text ===== */
 
 .demo-container {
   cursor: pointer;
@@ -147,3 +147,10 @@ h1, h2, h3, h4, h5, h6 {
     content: "1000px * 1000px";
   }
 }
+
+// .demo-text {}
+.demo-text__bg-0 { background-color: #FFEBEE; }
+.demo-text__bg-1 { background-color: #F3E5F5; }
+.demo-text__bg-2 { background-color: #FFF8E1; }
+.demo-text__bg-3 { background-color: #E1F5FE; }
+.demo-text__bg-4 { background-color: #E8F5E9; }
