--- a/src/demos/variables.scss
+++ b/src/demos/variables.scss
@@ -23,4 +23,25 @@ $demo-variant: (
   text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.2);
 }
 
-$demo-border-radius: 0px;
+@mixin demo-dark-button($position) {
+  position: fixed;
+  z-index: 12;
+  bottom: 0;
+  padding: 0.15rem 0.45rem;
+  @include demo-dark-box;
+  text-decoration: none;
+  font-family: -webkit-pictograph;
+  transition: background-color ease 300ms, color ease 300ms;
+
+  @if ($position == left) {
+    left: 0;
+  } @else {
+    right: 0;
+  }
+
+  &:hover {
+    background-color: map-get($demo-dark, border);
+    color: #ddd;
+  }
+}
+
