Change bfg__content--fill bg color into white

--- a/src/bem-flex-grid.scss
+++ b/src/bem-flex-grid.scss
@@ -8,7 +8,7 @@ $bfg-fill: (
   header-border: #d5d5d5,
   header-bg: #f6f6f6,
   content-border: #ddd,
-  content-bg: #eee
+  content-bg: #fff
 ) !default;
 
 $bfg-breakpoints: (
