--- a/src/demos/demo.scss
+++ b/src/demos/demo.scss
@@ -1,8 +1,8 @@
 @import "./variables.scss";
 
 html {
-  font-family: 'Helvetica Neue', 'Segoe UI', Helvetica, Verdana, sans-serif;
   color: #555;
+  font-family: 'Helvetica Neue', 'Segoe UI', Helvetica, Verdana, sans-serif;
   line-height: 1.375em;
 }
 
@@ -14,6 +14,12 @@ body {
 
 html, body {
   height: 100%;
+}
+
+/* ===== Change html background color ===== */
+
+.demo-page-bg--gray {
+  background-color: #f5f5f5;
 }
 
 /* ===== Restore default height ===== */
