--- a/src/demos/index.scss
+++ b/src/demos/index.scss
@@ -12,7 +12,7 @@ h1 {
   font-size: 2.5rem;
 }
 
-header {
+header, footer {
   margin: 3rem 0;
 }
 
@@ -36,7 +36,7 @@ a {
 .demo-showcase__iframe {
   display: block;
   width: 100%;
-  height: 360px;
+  height: 45vh;
   border: none;
   background-color: white;
 }
