--- a/src/bem-flex-grid.scss
+++ b/src/bem-flex-grid.scss
@@ -66,7 +66,7 @@ $bfg-header-height: 2rem !default;
 }
 
 .bfg__box {
-  flex: 1 1 100%;
+  flex: 0 1 100%;
   position: relative;
   overflow: auto;
   box-sizing: border-box;
@@ -77,39 +77,26 @@ $bfg-header-height: 2rem !default;
 }
 
 @mixin bfg-boxes($size: '') {
-  .bfg--row {
-    > .bfg__box--#{$size + 1} { max-width: (100% / 12); }
-    > .bfg__box--#{$size + 2} { max-width: (100% / 6); }
-    > .bfg__box--#{$size + 3} { max-width: 25%; }
-    > .bfg__box--#{$size + 4} { max-width: (100% / 3); }
-    > .bfg__box--#{$size + 5} { max-width: (500% / 12); }
-    > .bfg__box--#{$size + 6} { max-width: 50%; }
-    > .bfg__box--#{$size + 7} { max-width: (700% / 12); }
-    > .bfg__box--#{$size + 8} { max-width: (200% / 3); }
-    > .bfg__box--#{$size + 9} { max-width: 75%; }
-    > .bfg__box--#{$size + 10} { max-width: (1000% / 12); }
-    > .bfg__box--#{$size + 11} { max-width: (1100% / 12); }
-    > .bfg__box--#{$size + 12} { max-width: 100%; }
+  .bfg__box--#{$size + 1} { flex-basis: (100% / 12); }
+  .bfg__box--#{$size + 2} { flex-basis: (100% / 6); }
+  .bfg__box--#{$size + 3} { flex-basis: 25%; }
+  .bfg__box--#{$size + 4} { flex-basis: (100% / 3); }
+  .bfg__box--#{$size + 5} { flex-basis: (500% / 12); }
+  .bfg__box--#{$size + 6} { flex-basis: 50%; }
+  .bfg__box--#{$size + 7} { flex-basis: (700% / 12); }
+  .bfg__box--#{$size + 8} { flex-basis: (200% / 3); }
+  .bfg__box--#{$size + 9} { flex-basis: 75%; }
+  .bfg__box--#{$size + 10} { flex-basis: (1000% / 12); }
+  .bfg__box--#{$size + 11} { flex-basis: (1100% / 12); }
+  .bfg__box--#{$size + 12} { flex-basis: 100%; }
 
+  .bfg--row {
     &.bfg--#{$size + lines-2} > .bfg__box { height: 50%; }
     &.bfg--#{$size + lines-3} > .bfg__box { height: (100% / 3); }
     &.bfg--#{$size + lines-4} > .bfg__box { height: 25%; }
   }
 
   .bfg--col {
-    > .bfg__box--#{$size + 1} { max-height: (100% / 12); }
-    > .bfg__box--#{$size + 2} { max-height: (100% / 6); }
-    > .bfg__box--#{$size + 3} { max-height: 25%; }
-    > .bfg__box--#{$size + 4} { max-height: (100% / 3); }
-    > .bfg__box--#{$size + 5} { max-height: (500% / 12); }
-    > .bfg__box--#{$size + 6} { max-height: 50%; }
-    > .bfg__box--#{$size + 7} { max-height: (700% / 12); }
-    > .bfg__box--#{$size + 8} { max-height: (200% / 3); }
-    > .bfg__box--#{$size + 9} { max-height: 75%; }
-    > .bfg__box--#{$size + 10} { max-height: (1000% / 12); }
-    > .bfg__box--#{$size + 11} { max-height: (1100% / 12); }
-    > .bfg__box--#{$size + 12} { max-height: 100%; }
-
     &.bfg--#{$size + lines-2} > .bfg__box { width: 50%; }
     &.bfg--#{$size + lines-3} > .bfg__box { width: (100% / 3); }
     &.bfg--#{$size + lines-4} > .bfg__box { width: 25%; }
