--- a/src/demos/demo.scss
+++ b/src/demos/demo.scss
@@ -26,7 +26,7 @@ html, body {
 
 .demo-page-height--disabled { // Add to the <html> tag
   &, body {
-    height: initial;
+    height: auto;
   }
 }
 
